deploy/internal/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: config
              subPath: config
            - mountPath: /metadata
              name: config
              subPath: metadata
            - mountPath: /audiobooks
              name: media
        - name: libation
          image: ticklethepanda/libation-sync:latest
          imagePullPolicy: Always
          args: ["/usr/local/bin/sync-runner"]
          ports:
            - containerPort: 8091
          volumeMounts:
            - mountPath: /config
              name: libation-config
            - mountPath: /data
              name: media
              subPath: audible
        - name: librofm-sync
          image: ticklethepanda/librofm-sync:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          volumeMounts:
            - mountPath: /audiobooks
              name: media
              subPath: librofm
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
        - name: media
          persistentVolumeClaim:
            claimName: audiobookshelf-media
        - name: libation-config
          persistentVolumeClaim:
            claimName: audiobookshelf-libation-config
