deploy/internal/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: audiobookshelf
