deploy/internal/audiobookshelf/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  entryPoints:
    - int-web-secure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`audiobooks.internal.ticklethepanda.co.uk`)
      services:
        - name: audiobookshelf
          namespace: audiobookshelf
          port: 80
